Renamed Models to Domain

--- a/Pubquiz.Domain/Pubquiz.Domain.csproj
+++ b/Pubquiz.Domain/Pubquiz.Domain.csproj
@@ -2,6 +2,8 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.0</TargetFramework>
+        <AssemblyName>Pubquiz.Domain</AssemblyName>
+        <RootNamespace>Pubquiz.Domain</RootNamespace>
     </PropertyGroup>
 
 </Project>
