--- a/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -5,11 +5,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Folder Include="wwwroot\"/>
+        <Folder Include="wwwroot\" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App"/>
+        <PackageReference Include="Microsoft.AspNetCore.App" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Pubquiz.Domain\Pubquiz.Domain.csproj" />
     </ItemGroup>
 
 </Project>
