Removed Citolab.Repository and added own Repository project (with some fixes)

--- a/Pubquiz.Domain/Pubquiz.Domain.csproj
+++ b/Pubquiz.Domain/Pubquiz.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Citolab.Repository" Version="2018.7.2.2"/>
+        <ProjectReference Include="..\Pubquiz.Repository\Pubquiz.Repository.csproj"/>
     </ItemGroup>
 
 </Project>
