--- a/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -10,6 +10,15 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" />
+        <PackageReference Include="Swashbuckle.AspNetCore">
+            <Version>3.0.0</Version>
+        </PackageReference>
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations">
+            <Version>3.0.0</Version>
+        </PackageReference>
+        <PackageReference Include="System.Text.Encoding.CodePages">
+            <Version>4.5.0</Version>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
