--- a/backend/Pubquiz.Domain/Pubquiz.Domain.csproj
+++ b/backend/Pubquiz.Domain/Pubquiz.Domain.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Pubquiz.Repository\Pubquiz.Repository.csproj"/>
+        <ProjectReference Include="..\Pubquiz.Persistence\Pubquiz.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
