--- a/backend/Pubquiz.Domain.Tests/Pubquiz.Domain.Tests.csproj
+++ b/backend/Pubquiz.Domain.Tests/Pubquiz.Domain.Tests.csproj
@@ -7,14 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0"/>
-        <PackageReference Include="MSTest.TestAdapter" Version="1.3.2"/>
-        <PackageReference Include="MSTest.TestFramework" Version="1.3.2"/>
-        <PackageReference Include="System.Interactive.Async" Version="3.2.0"/>
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
+        <PackageReference Include="MSTest.TestAdapter" Version="1.3.2" />
+        <PackageReference Include="MSTest.TestFramework" Version="1.3.2" />
+        <PackageReference Include="Rebus" Version="4.2.2" />
+        <PackageReference Include="System.Interactive.Async" Version="3.2.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Pubquiz.Domain\Pubquiz.Domain.csproj"/>
+        <ProjectReference Include="..\Pubquiz.Domain\Pubquiz.Domain.csproj" />
+        <ProjectReference Include="..\Pubquiz.Logic\Pubquiz.Logic.csproj" />
     </ItemGroup>
 
 </Project>
