--- a/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
+++ b/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
@@ -5,6 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.0.4" />
       <PackageReference Include="Rebus" Version="4.2.2" />
     </ItemGroup>
 
