--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -10,15 +10,21 @@
   "dependencies": {
     "@aspnet/signalr": "^1.0.4",
     "vue": "^2.5.17",
+    "vue-class-component": "^6.0.0",
+    "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
     "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-plugin-typescript": "^3.1.0",
     "@vue/cli-service": "^3.0.4",
+    "@vue/eslint-config-typescript": "^3.0.4",
     "axios": "^0.18.0",
+    "typescript": "^3.0.0",
     "vue-cli-plugin-axios": "0.0.4",
+    "vue-cli-plugin-axios-ts": "^1.0.2",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
@@ -28,11 +34,12 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript"
     ],
     "rules": {},
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "typescript-eslint-parser"
     }
   },
   "postcss": {
