--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@aspnet/signalr": "^1.0.4",
+    "ts-loader": "^5.3.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
@@ -16,10 +17,10 @@
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.4",
-    "@vue/cli-plugin-eslint": "^3.0.4",
+    "@vue/cli-plugin-babel": "^3.1.0",
+    "@vue/cli-plugin-eslint": "^3.1.3",
     "@vue/cli-plugin-typescript": "^3.1.0",
-    "@vue/cli-service": "^3.0.4",
+    "@vue/cli-service": "^3.1.1",
     "@vue/eslint-config-typescript": "^3.0.4",
     "axios": "^0.18.0",
     "typescript": "^3.0.0",
