--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -9,39 +9,25 @@
   },
   "dependencies": {
     "@aspnet/signalr": "^1.0.4",
-    "ts-loader": "^5.3.0",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "axios": "^0.18.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.1.0",
-    "@vue/cli-plugin-eslint": "^3.1.3",
-    "@vue/cli-plugin-typescript": "^3.1.0",
-    "@vue/cli-service": "^3.1.1",
-    "@vue/eslint-config-typescript": "^3.0.4",
-    "axios": "^0.18.0",
-    "typescript": "^3.0.0",
+    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-typescript": "^3.1.1",
+    "@vue/cli-service": "^3.1.3",
+    "node-sass": "^4.9.0",
+    "sass-loader": "^7.0.1",
+    "ts-loader": "^5.3.0",
+    "tslint-config-prettier": "^1.15.0",
+    "typescript": "^3.1.6",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-axios-ts": "^1.0.2",
     "vue-template-compiler": "^2.5.17"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended",
-      "@vue/typescript"
-    ],
-    "rules": {},
-    "parserOptions": {
-      "parser": "typescript-eslint-parser"
-    }
   },
   "postcss": {
     "plugins": {
