--- a/team-frontend/.gitignore
+++ b/team-frontend/.gitignore
@@ -13,7 +13,7 @@ yarn-error.log*
 
 # Editor directories and files
 .idea
-.vscode
+# .vscode # commit this because of launch/debug configuration https://stackoverflow.com/a/32979933/160608
 *.suo
 *.ntvs*
 *.njsproj
