--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@aspnet/signalr": "^1.0.4",
     "axios": "^0.18.0",
+    "bootstrap-vue": "^2.0.0-rc.11",
     "vue": "^2.5.17",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
