--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -23,8 +23,10 @@
     "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/cli-service": "^3.1.3",
     "node-sass": "^4.9.0",
+    "prettier": "^1.15.2",
     "sass-loader": "^7.0.1",
     "ts-loader": "^5.3.0",
+    "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "typescript": "^3.1.6",
     "vue-cli-plugin-axios": "0.0.4",
