--- a/team-frontend/.vscode/settings.json
+++ b/team-frontend/.vscode/settings.json
@@ -2,5 +2,8 @@
   "eslint.enable": false,
   "prettier.eslintIntegration": false,
   "prettier.tslintIntegration": false,
-  "prettier.singleQuote": true
+  "prettier.singleQuote": true,
+  "javascript.preferences.quoteStyle": "single",
+  "typescript.preferences.quoteStyle": "single",
+  "prettier.jsxSingleQuote": true
 }
