--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@aspnet/signalr": "^1.1.2",
+    "@types/node": "^11.9.6",
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.13",
     "vue": "^2.6.7",
