--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+  "Database": "Memory"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -6,6 +9,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDB": "mongodb://192.168.99.101:27017"
+    "MongoDB": "mongodb://localhost:27017"
   }
 }
