--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.1</TargetFramework>
+        <TargetFramework>netcoreapp2.2</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,16 +11,16 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.App" />
         <PackageReference Include="Rebus.ServiceProvider">
-          <Version>4.0.1</Version>
+          <Version>4.0.2</Version>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore">
-            <Version>3.0.0</Version>
+            <Version>4.0.1</Version>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations">
-            <Version>3.0.0</Version>
+            <Version>4.0.1</Version>
         </PackageReference>
         <PackageReference Include="System.Text.Encoding.CodePages">
-            <Version>4.5.0</Version>
+            <Version>4.5.1</Version>
         </PackageReference>
     </ItemGroup>
 
