--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -9,27 +9,27 @@
   },
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
-    "@types/node": "^11.13.13",
+    "@types/node": "^11.13.20",
     "axios": "^0.18.1",
-    "bootstrap-vue": "^2.0.0-rc.22",
+    "bootstrap-vue": "^2.0.1",
     "vue": "^2.6.10",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.3.0",
-    "vue-router": "^3.0.6",
+    "vue-router": "^3.1.3",
     "vue-snotify": "^3.2.1",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-plugin-typescript": "^3.8.1",
-    "@vue/cli-service": "^3.8.0",
+    "@vue/cli-plugin-babel": "^3.11.0",
+    "@vue/cli-plugin-typescript": "^3.11.0",
+    "@vue/cli-service": "^3.11.0",
     "node-sass": "^4.12.0",
-    "prettier": "^1.17.1",
-    "sass-loader": "^7.0.1",
+    "prettier": "^1.18.2",
+    "sass-loader": "^7.3.1",
     "ts-loader": "^5.4.5",
-    "tslint": "^5.17.0",
+    "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.5.1",
+    "typescript": "^3.6.3",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-axios-ts": "^1.0.2",
     "vue-template-compiler": "^2.6.10"
