--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.24",
+    "@fortawesome/free-solid-svg-icons": "^5.11.1",
+    "@fortawesome/vue-fontawesome": "^0.1.7",
     "@types/node": "^12.7.5",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.1",
