--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netcoreapp3.0</TargetFramework>
+        <LangVersion>8</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -9,7 +10,7 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.App" />
+
         <PackageReference Include="Rebus.ServiceProvider">
           <Version>4.0.2</Version>
         </PackageReference>
@@ -19,8 +20,11 @@
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations">
             <Version>4.0.1</Version>
         </PackageReference>
+        <PackageReference Include="System.Interactive.Async">
+          <Version>4.0.0</Version>
+        </PackageReference>
         <PackageReference Include="System.Text.Encoding.CodePages">
-            <Version>4.5.1</Version>
+            <Version>4.6.0</Version>
         </PackageReference>
     </ItemGroup>
 
