--- a/backend/Pubquiz.Persistence/Pubquiz.Persistence.csproj
+++ b/backend/Pubquiz.Persistence/Pubquiz.Persistence.csproj
@@ -8,12 +8,13 @@
     </PropertyGroup>
 
     <ItemGroup>
+        
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="3.0.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="3.0.0" />
         <PackageReference Include="MongoDB.Driver" Version="2.9.1" />
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+        <PackageReference Include="System.Text.Json" Version="4.6.0" />
     </ItemGroup>
 
 </Project>
