--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -11,14 +11,18 @@
 
     <ItemGroup>
 
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson">
+          <Version>3.0.0</Version>
+        </PackageReference>
+
         <PackageReference Include="Rebus.ServiceProvider">
           <Version>4.0.2</Version>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore">
-            <Version>4.0.1</Version>
+            <Version>5.0.0-rc4</Version>
         </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore.Annotations">
-            <Version>4.0.1</Version>
+            <Version>5.0.0-rc4</Version>
         </PackageReference>
         <PackageReference Include="System.Interactive.Async">
           <Version>4.0.0</Version>
