--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -11,6 +11,10 @@
 
     <ItemGroup>
 
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer">
+          <Version>3.0.0</Version>
+        </PackageReference>
+
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson">
           <Version>3.0.0</Version>
         </PackageReference>
