--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -1,8 +1,9 @@
 {
   "AppSettings": {
-    "corsAllowedOrigins": "localhost:8080",
-  "Database": "Memory"
-},
+    "jwtSecret": "w9sXfDAnywi7WBHsSmqNwXish4JShKfm",
+    "corsAllowedOrigins": "localhost:8080, https://localhost:5001",
+    "Database": "Memory"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
