--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -8,13 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@aspnet/signalr": "^1.1.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.24",
-    "@fortawesome/free-solid-svg-icons": "^5.11.1",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/vue-fontawesome": "^0.1.7",
-    "@types/node": "^12.7.5",
+    "@microsoft/signalr": "^3.0.0",
+    "@types/node": "^12.7.11",
     "axios": "^0.19.0",
-    "bootstrap-vue": "^2.0.1",
+    "bootstrap-vue": "^2.0.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.2.2",
@@ -29,7 +29,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
-    "ts-loader": "^6.1.0",
+    "ts-loader": "^6.2.0",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.6.3",
