--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.0.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
+    "vue-i18n": "^8.15.0",
     "vue-property-decorator": "^8.2.2",
     "vue-router": "^3.1.3",
     "vue-snotify": "^3.2.1",
