--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
@@ -23,6 +24,8 @@
     "vuex": "^3.1.1"
   },
   "devDependencies": {
+    "@kazupon/vue-i18n-loader": "^0.3.0",
+    "@types/webpack": "^4.4.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-typescript": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
@@ -35,6 +38,7 @@
     "typescript": "^3.6.3",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-axios-ts": "^1.0.2",
+    "vue-cli-plugin-i18n": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
   },
   "postcss": {
