--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^12.7.12",
     "axios": "^0.19.0",
     "bootstrap-vue": "^2.0.3",
+    "core-js": "^3.3.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-i18n": "^8.15.0",
@@ -26,9 +27,9 @@
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
     "@types/webpack": "^4.4.0",
-    "@vue/cli-plugin-babel": "^3.11.0",
-    "@vue/cli-plugin-typescript": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@vue/cli-plugin-babel": "^4.0.5",
+    "@vue/cli-plugin-typescript": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
     "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "sass-loader": "^8.0.0",
