--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AppSettings": {
     "jwtSecret": "w9sXfDAnywi7WBHsSmqNwXish4JShKfm",
-    "corsAllowedOrigins": "localhost:8080, https://localhost:5001",
+    "corsAllowedOrigins": "http://localhost:8080, https://localhost:5001",
     "Database": "MongoDB"
   },
   "Logging": {
