--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -2,7 +2,7 @@
   "AppSettings": {
     "jwtSecret": "w9sXfDAnywi7WBHsSmqNwXish4JShKfm",
     "corsAllowedOrigins": "http://localhost:8080, https://localhost:5001",
-    "Database": "MongoDB"
+    "Database": "Memory"
   },
   "Logging": {
     "LogLevel": {
