--- a/.github/workflows/dotnetcore-backend.yml
+++ b/.github/workflows/dotnetcore-backend.yml
@@ -26,3 +26,21 @@ jobs:
     - name: Test
       working-directory: backend
       run: dotnet test --no-restore --verbosity normal
+    - name: Notify slack success
+      if: success()
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+      uses: voxmedia/github-action-slack-notify-build@v1
+      with:
+        channel: sourcecontrol
+        status: SUCCESS
+        color: good
+    - name: Notify slack fail
+      if: failure()
+      env:
+        SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+      uses: voxmedia/github-action-slack-notify-build@v1
+      with:
+        channel: sourcecontrol
+        status: FAILED
+        color: danger
