--- a/.github/workflows/dotnetcore-backend.yml
+++ b/.github/workflows/dotnetcore-backend.yml
@@ -26,6 +26,14 @@ jobs:
     - name: Test
       working-directory: backend
       run: dotnet test --no-restore --verbosity normal
+    - name: Upload artifact
+      if: success()
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        # Artifact name
+        name: backend
+        # Directory containing files to upload
+        path: Pubquiz.WebApi/bin/Release/netcoreapp3.1
     - name: Notify slack success
       if: success()
       env:
