--- a/.github/workflows/dotnetcore-backend.yml
+++ b/.github/workflows/dotnetcore-backend.yml
@@ -2,10 +2,10 @@ name: Backend build, test and deployment to thenanne.nl
 
 on: 
   push:
-    paths: backend
+    paths: ['.github/dotnetcore-backend.yml','backend/**']
     branches: [ master ]
   pull_request:
-    paths: backend
+    paths: ['.github/dotnetcore-backend.yml','backend/**']
     branches: [ master ]
 
 jobs:
