--- a/.github/workflows/team-frontend-build-and-deploy.yml
+++ b/.github/workflows/team-frontend-build-and-deploy.yml
@@ -11,13 +11,13 @@
 #on:
 #  release:
 #    types: [created]
-name: Build, test and deploy team-frontend
+name: team-frontend - build, test and deploy 
 on: 
   push:
-    paths: ['.github/**','team-frontend/**']
+    paths: ['.github/team-frontend-build-and-deploy.yml','team-frontend/**']
     branches: [ master ]
   pull_request:
-    paths: ['.github/**','team-frontend/**']
+    paths: ['.github/team-frontend-build-and-deploy.yml','team-frontend/**']
     branches: [ master ]
     
 env:
