--- a/.github/workflows/team-frontend-build-and-deploy.yml
+++ b/.github/workflows/team-frontend-build-and-deploy.yml
@@ -53,11 +53,11 @@ jobs:
       uses: SamKirkland/FTP-Deploy-Action@3.0.0
       with:
         # Deployment destination server & path. Formatted as protocol://domain.com:port/full/destination/path/
-        ftp-server: ${{ secret.THENANNE_FTP_SERVER }}
+        ftp-server: ${{ secrets.THENANNE_FTP_SERVER }}
         # FTP account username
-        ftp-username: ${{ secret.THENANNE_FTP_USER }}
+        ftp-username: ${{ secrets.THENANNE_FTP_USER }}
         # FTP account password
-        ftp-password: ${{ secret.THENANNE_FTP_PASSWORD }}
+        ftp-password: ${{ secrets.THENANNE_FTP_PASSWORD }}
         # The local folder to copy, defaults to root project folder
         local-dir: team-frontend/dist
 #    - name: 'Deploy to Azure WebApp'
