--- a/team-frontend/.vscode/settings.json
+++ b/team-frontend/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "javascript.preferences.quoteStyle": "single",
   "typescript.preferences.quoteStyle": "single",
+  "vetur.format.defaultFormatter.ts": "prettier-tslint",
 }
