--- a/team-frontend/.vscode/settings.json
+++ b/team-frontend/.vscode/settings.json
@@ -2,4 +2,5 @@
   "javascript.preferences.quoteStyle": "single",
   "typescript.preferences.quoteStyle": "single",
   "vetur.format.defaultFormatter.ts": "prettier-tslint",
+  "debug.allowBreakpointsEverywhere": true,
 }
