--- a/team-frontend/.vscode/extensions.json
+++ b/team-frontend/.vscode/extensions.json
@@ -11,7 +11,8 @@
     "ms-vscode.vscode-typescript-tslint-plugin",
     "dbaeumer.vscode-eslint",
     "chiadem.cs2ts-vscode-extension",
-    "eg2.vscode-npm-script"
+    "eg2.vscode-npm-script",
+    "johnpapa.vscode-peacock"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
