simplified QuizItem and QuizItemType * show question properties when navigating

--- a/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
+++ b/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
@@ -15,4 +15,9 @@
       <ProjectReference Include="..\Pubquiz.Persistence\Pubquiz.Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Requests\Commands" />
+      <Folder Include="Requests\Notifications" />
+    </ItemGroup>
+
 </Project>
