renamed stuff * added classes for ingame and ranking view models

--- a/team-frontend/.vscode/launch.json
+++ b/team-frontend/.vscode/launch.json
@@ -24,6 +24,19 @@
       "sourceMapPathOverrides": {
         "webpack:///*": "${webRoot}/*"
       }
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "vuejs: chromium",
+      "runtimeExecutable": "/usr/bin/chromium-browser",
+      "runtimeArgs": ["--remote-debugging-port=9222"],
+      "url": "http://localhost:8080",
+      "webRoot": "${workspaceFolder}",
+      "breakOnLoad": true,
+      "sourceMapPathOverrides": {
+        "webpack:///*": "${webRoot}/*"
+      }
     }
   ]
 }
