--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -14,10 +14,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
     "@microsoft/signalr": "^3.1.3",
-    "@types/node": "^12.12.35",
     "axios": "^0.19.2",
     "bootstrap-vue": "^2.11.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-i18n": "^8.17.1",
@@ -28,6 +28,8 @@
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
     "@types/webpack": "^4.41.11",
+    "@types/lodash": "^4.14.152",
+    "@types/node": "^12.12.35",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
