updated packages * recommended extensions changed because tslint deprecated

--- a/team-frontend/.vscode/settings.json
+++ b/team-frontend/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
+  "debug.allowBreakpointsEverywhere": true,
   "javascript.preferences.quoteStyle": "single",
   "typescript.preferences.quoteStyle": "single",
-  "debug.allowBreakpointsEverywhere": true
+  "vetur.format.defaultFormatter.js": "prettier-eslint",
+  "vetur.format.defaultFormatter.ts": "prettier"
 }
