--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -13,31 +13,31 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/vue-fontawesome": "^0.1.9",
-    "@microsoft/signalr": "^3.1.3",
+    "@microsoft/signalr": "^3.1.4",
     "axios": "^0.19.2",
-    "bootstrap-vue": "^2.11.0",
+    "bootstrap-vue": "^2.15.0",
     "core-js": "^3.6.5",
     "lodash": "^4.17.15",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-i18n": "^8.17.1",
-    "vue-property-decorator": "^8.4.1",
-    "vue-router": "^3.1.6",
-    "vuex": "^3.1.3"
+    "vue-i18n": "^8.17.7",
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
-    "@kazupon/vue-i18n-loader": "^0.3.0",
-    "@types/webpack": "^4.41.11",
+    "@kazupon/vue-i18n-loader": "^0.5.0",
     "@types/lodash": "^4.14.152",
-    "@types/node": "^12.12.35",
+    "@types/node": "^14.0.5",
+    "@types/webpack": "^4.41.13",
     "@vue/cli-plugin-babel": "^4.3.1",
     "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
-    "prettier": "^1.19.1",
-    "ts-loader": "^6.2.2",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.8.3",
+    "prettier": "^2.0.5",
+    "ts-loader": "^7.0.5",
+    "typescript": "^3.9.3",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-axios-ts": "^1.0.2",
     "vue-cli-plugin-i18n": "^1.0.1",
