--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "build-prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint",
+    "build-prod": "vue-cli-service build --mode production",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
@@ -28,14 +28,24 @@
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.5.0",
     "@types/lodash": "^4.14.152",
-    "@types/node": "^14.0.5",
+    "@types/node": "^13.11.1",
     "@types/webpack": "^4.41.13",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "@vue/cli-plugin-babel": "^4.3.1",
+    "@vue/cli-plugin-eslint": "^4.3.1",
     "@vue/cli-plugin-typescript": "^4.3.1",
     "@vue/cli-service": "^4.3.1",
+    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/eslint-config-typescript": "^5.0.2",
+    "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.3",
-    "eslint": "^7.1.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-axios-ts": "^1.0.2",
     "vue-cli-plugin-i18n": "^1.0.1",
