--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <Folder Include="wwwroot\" />
+        <Folder Include="wwwroot\mediaobjects" />
     </ItemGroup>
 
     <ItemGroup>
