--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -1,14 +1,14 @@
 {
   "AppSettings": {
     "jwtSecret": "w9sXfDAnywi7WBHsSmqNwXish4JShKfm",
-    "corsAllowedOrigins": "http://localhost:8080, https://localhost:5001",
+    "corsAllowedOrigins": "http://localhost:8080, http://localhost:8081, https://localhost:5001",
     "Database": "Memory"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning", 
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Warning"
     }
   },
   "AllowedHosts": "*",
