--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "QuizrSettings": {
+    "contentPath": "uploads"
+  },
   "AppSettings": {
     "jwtSecret": "w9sXfDAnywi7WBHsSmqNwXish4JShKfm",
     "corsAllowedOrigins": "http://localhost:8080, http://localhost:8081, https://localhost:5001",
