--- a/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
+++ b/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ExcelDataReader" Version="3.6.0" />
+      <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
       <PackageReference Include="Rebus" Version="6.4.1" />
     </ItemGroup>
