--- a/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
+++ b/backend/Pubquiz.WebApi/Pubquiz.WebApi.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <Folder Include="wwwroot\" />
         <Folder Include="wwwroot\mediaobjects" />
+        <Folder Include="wwwroot\uploads" />
     </ItemGroup>
 
     <ItemGroup>
