--- a/backend/Pubquiz.WebApi/appsettings.Development.json
+++ b/backend/Pubquiz.WebApi/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "QuizrSettings": {
+    "baseUrl": "https://localhost:5001",
+    "contentPath": "quiz"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
