--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -1,6 +1,7 @@
 {
   "QuizrSettings": {
-    "contentPath": "uploads"
+    "baseUrl": "https://www.decemberist.nl",
+    "contentPath": "quiz"
   },
   "AppSettings": {
     "jwtSecret": "w9sXfDAnywi7WBHsSmqNwXish4JShKfm",
