--- a/backend/Pubquiz.Domain.Tests/Pubquiz.Domain.Tests.csproj
+++ b/backend/Pubquiz.Domain.Tests/Pubquiz.Domain.Tests.csproj
@@ -34,5 +34,8 @@
         <None Update="testfiles\PeCe.zip">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </None>
+        <None Update="testfiles\OKI-Kerstquiz-2020.zip">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 </Project>
