--- a/team-frontend/package.json
+++ b/team-frontend/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
+    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.vue' --locales './src/locales/**/*.json'"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
