--- a/.github/workflows/all-build-and-test-on-pr.yml
+++ b/.github/workflows/all-build-and-test-on-pr.yml
@@ -9,13 +9,13 @@
 # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
 
-name: all - build, test and deploy 
+name: all - build and test on pr
 # on:
 #  release:
 #    types: [created, edited]
 
 on: 
-  push:
+  pull_request:
     #paths: ['.github/workflows/team-frontend-build-and-deploy.yml','team-frontend/**']
     branches: [ master ]
     
@@ -43,18 +43,6 @@ jobs:
     - name: npm run test
       working-directory: team-frontend
       run: npm run test --if-present
-    #     # move the contents of the dist folder to a subfolder called
-    #     # wwwroot. 
-    #     mkdir pub
-    #     mv dist/* pub
-    #     mv pub wwwroot
-    #     mv wwwroot dist/
-    #     ls dist/wwwroot
-    - name: Upload artifacts
-      uses: actions/upload-artifact@master
-      with:
-        name: dist-folder # Upload artifact with name `dist`
-        path: 'team-frontend/dist' # Upload content of `dist` folder
   build-backend:
     name: build backend
     runs-on: ubuntu-latest
@@ -79,23 +67,6 @@ jobs:
       with:
         name: dist-folder 
         path: ${{env.DOTNET_ROOT}}/myapp/wwwroot
-    - name: dotnet publish
-      working-directory: backend
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp        
-    - name: Upload artifact
-      if: success()
-      uses: actions/upload-artifact@v1.0.0
-      with:
-        name: backend
-        path: ${{env.DOTNET_ROOT}}/myapp    
-        # path: backend/Pubquiz.WebApi/bin/Release/netcoreapp3.1
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: 'quizr-web'
-        slot-name: 'production'
-        publish-profile: ${{ secrets.QUIZR_WEB_PUBLISH_PROFILE }}
-        package: ${{env.DOTNET_ROOT}}/myapp 
     - name: Notify slack success
       if: success()
       env:
