move to quizr.nl

--- a/backend/Pubquiz.WebApi/appsettings.json
+++ b/backend/Pubquiz.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "QuizrSettings": {
-    "baseUrl": "https://www.decemberist.nl",
+    "baseUrl": "https://quizr.nl",
     "contentPath": "quiz"
   },
   "AppSettings": {
