move from Rebus to MediatR. Work in progress, unit tests failing

--- a/backend/Pubquiz.WebApi/appsettings.Development.json
+++ b/backend/Pubquiz.WebApi/appsettings.Development.json
@@ -3,11 +3,20 @@
     "baseUrl": "https://localhost:5001",
     "contentPath": "quiz"
   },
+  "AppSettings": {
+    "jwtSecret": "w9sXfDAnywi7WBHsSmqNwXish4JShKfm",
+    "corsAllowedOrigins": "http://localhost:8080, http://localhost:8081, https://localhost:5001",
+    "Database": "MongoDB"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDB": "mongodb://localhost:27017"
   }
 }
