--- a/backend/Pubquiz.Domain.Tests/Pubquiz.Domain.Tests.csproj
+++ b/backend/Pubquiz.Domain.Tests/Pubquiz.Domain.Tests.csproj
@@ -9,17 +9,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.8.3" />
         <PackageReference Include="MSTest.TestAdapter" Version="2.1.2" />
         <PackageReference Include="MSTest.TestFramework" Version="2.1.2" />
-        <PackageReference Include="Rebus" Version="6.4.1" />
         <PackageReference Include="System.Interactive.Async" Version="5.0.0" />
         <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\Pubquiz.Domain\Pubquiz.Domain.csproj" />
         <ProjectReference Include="..\Pubquiz.Logic\Pubquiz.Logic.csproj" />
     </ItemGroup>
 
