--- a/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
+++ b/backend/Pubquiz.Logic/Pubquiz.Logic.csproj
@@ -8,8 +8,8 @@
     <ItemGroup>
       <PackageReference Include="ExcelDataReader" Version="3.6.0" />
       <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
+      <PackageReference Include="MediatR" Version="9.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
-      <PackageReference Include="Rebus" Version="6.4.1" />
     </ItemGroup>
 
     <ItemGroup>
