--- a/backend/Pubquiz.WebApi/appsettings.Development.json
+++ b/backend/Pubquiz.WebApi/appsettings.Development.json
@@ -10,6 +10,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDB": "mongodb://localhost:27017"
+    "MongoDB": "mongodb://nasi:27017"
   }
 }
