Persistence now depends on Domain, instead of the other way around

--- a/backend/Pubquiz.Persistence/Pubquiz.Persistence.csproj
+++ b/backend/Pubquiz.Persistence/Pubquiz.Persistence.csproj
@@ -17,4 +17,12 @@
         <PackageReference Include="System.Text.Json" Version="5.0.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Pubquiz.Domain\Pubquiz.Domain.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Extensions" />
+    </ItemGroup>
+
 </Project>
